# Library

./: .gitignore  docker-compose.yml  pyproject.toml
Library-application/: .env.template  alembic.ini  main.py
Library-application/alembic/: env.py
Library-application/alembic/versions/2026/03/: 07_1246_36_b50c8ff42d5b_create_students_table.py  07_1313_24_e4f36296f8a8_create_students_table.py  07_1410_26_9f58686f870d_create_workers_table.py  07_1526_45_d5e915998396_create_books_and_covers_table.py
Library-application/api/: __init__.py
Library-application/api/api_v1/: __init__.py  books.py  students.py  workers.py
Library-application/api/api_v1/auth/: jwt_auth.py  utils.py  views.py
Library-application/core/: config.py
Library-application/core/models/: __init__.py  base.py  books.py  covers.py  db_helper.py  student.py  workers.py
Library-application/core/schemas/: book.py  student.py  worker.py
Library-application/crud/: books.py  students.py  workers.py
